fix: avatar size on small devices

--- a/src/styles/components/home.css
+++ b/src/styles/components/home.css
@@ -21,11 +21,20 @@
 }
 
 .home__avatar img {
+    display: flex;
     max-width: 100%;
-    border-radius: 70%;
-    object-fit: cover;
-    height: 400px;
     width: 400px;
+    max-height: 400px;
+    object-fit: cover;
+
+    border-radius: 50%;
+}
+
+@media (max-width: 500px) {
+    .home__avatar img {
+        width: 250px;
+        height: 250px;
+    }
 }
 
 /* Greetings */
